# python-template

./: .gitignore  README.md  adhoc.ipynb  justfile  pyproject.toml  template-README.md
src/common/: better_logger.py  settings.py
src/entry/: app.py
tests/: conftest.py
tests/entry/: test_app.py
